--- a/flix/app/views/movies/index.html.erb
+++ b/flix/app/views/movies/index.html.erb
@@ -1,7 +1,10 @@
-<h1><%= @movies.size %> Movies</h1>
+<h1>Movies</h1>
 
 <ul>
-  <% @movies.each do |movie| %>
-  <li><%= movie %></li>
-  <% end %>
+<% @movies.each do |movie| %>
+  <li>
+    <strong><%= movie.title %></strong> (<%= movie.rating %>):
+    <%= number_to_currency(movie.total_gross) %>
+  </li>
+<% end %>
 </ul>
