--- a/crowdfund/app/views/projects/index.html.erb
+++ b/crowdfund/app/views/projects/index.html.erb
@@ -1,11 +1,26 @@
 <h1><%= @projects.size %> Projects</h1>
 
-<ul>
-  <% @projects.each do |project| %>
-  <li>
-    <strong><%= project.name %> :</strong>
-    <u>About</u> : <%= project.description %>
-    <u>Target</u> : <%= number_to_currency(project.target_pledge_amount) %>
-  </li>
-  <% end %>
-</ul>
+<% @projects.each do |project| %>
+  <article>
+    <header>
+      <h2><%= project.name %></h2>
+    </header>
+    <p>
+      <%= project.description %>
+    </p>
+    <table>
+      <tr>
+        <th>Target Date:</th>
+        <td><%= project.pledging_ends_on %></td>
+      </tr>
+      <tr>
+        <th>Website:</th>
+        <td><%= project.website %></td>
+      </tr>
+      <tr>
+        <th>Target Pledge:</th>
+        <td><%= number_to_currency(project.target_pledge_amount) %></td>
+      </tr>
+    </table>
+  </article>
+<% end %>
